Project1/y.output
Terminals unused in grammar

   CBEGIN
   CEND


状态 49 conflicts: 1 shift/reduce
状态 66 conflicts: 11 shift/reduce
状态 95 conflicts: 2 reduce/reduce
状态 97 conflicts: 2 reduce/reduce
状态 109 conflicts: 12 reduce/reduce


语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | %empty

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB

   18 FunDec: ID LP VarList RP
   19       | ID LP RP

   20 VarList: ParamDec COMMA VarList
   21        | ParamDec
   22        | ParamDec error

   23 ParamDec: Specifier VarDec

   24 CompSt: LC DefList StmtList RC

   25 StmtList: Stmt StmtList
   26         | %empty

   27 Stmt: Exp SEMI
   28     | CompSt
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt
   33     | Exp error
   34     | IF error
   35     | IF LP error
   36     | WHILE error
   37     | WHILE LP error

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI

   41 DecList: Dec
   42        | Dec COMMA DecList

   43 Dec: VarDec
   44    | VarDec ASSIGNOP Exp

   45 Exp: Exp ASSIGNOP Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp RELOP Exp
   49    | Exp PLUS Exp
   50    | Exp MINUS Exp
   51    | Exp STAR Exp
   52    | Exp DIV Exp
   53    | LP Exp RP
   54    | MINUS Exp
   55    | NOT Exp
   56    | ID LP Args RP
   57    | ID LP RP
   58    | Exp LB Exp RB
   59    | Exp DOT ID
   60    | ID
   61    | INT
   62    | FLOAT
   63    | Exp LB error
   64    | Exp LP error
   65    | error

   66 Args: Exp COMMA Args
   67     | Exp
   68     | Exp error


Terminals, with rules where they appear

$end (0) 0
error (256) 22 33 34 35 36 37 63 64 65 68
INT (258) 17 61
FLOAT (259) 62
ID (260) 13 15 16 18 19 56 57 59 60
SEMI (261) 4 5 27 29 40
COMMA (262) 8 20 42 66
ASSIGNOP (263) 44 45
RELOP (264) 48
PLUS (265) 49
MINUS (266) 50 54
STAR (267) 51
DIV (268) 52
AND (269) 46
OR (270) 47
DOT (271) 59
NOT (272) 55
TYPE (273) 9
LP (274) 18 19 30 31 32 35 37 53 56 57 64
RP (275) 18 19 30 31 32 53 56 57
LB (276) 17 58 63
RB (277) 17 58
LC (278) 11 24
RC (279) 11 24
STRUCT (280) 11 12
RETURN (281) 29
IF (282) 30 31 34 35
ELSE (283) 31
WHILE (284) 32 36 37
CBEGIN (285)
CEND (286)
LOWER_THAN_ELSE (287)


Nonterminals, with rules where they appear

$accept (33)
    左： 0
Program (34)
    左： 1, 右： 0
ExtDefList (35)
    左： 2 3, 右： 1 2
ExtDef (36)
    左： 4 5 6, 右： 2
ExtDecList (37)
    左： 7 8, 右： 4 8
Specifier (38)
    左： 9 10, 右： 4 5 6 23 40
StructSpecifier (39)
    左： 11 12, 右： 10
OptTag (40)
    左： 13 14, 右： 11
Tag (41)
    左： 15, 右： 12
VarDec (42)
    左： 16 17, 右： 7 8 17 23 43 44
FunDec (43)
    左： 18 19, 右： 6
VarList (44)
    左： 20 21 22, 右： 18 20
ParamDec (45)
    左： 23, 右： 20 21 22
CompSt (46)
    左： 24, 右： 6 28
StmtList (47)
    左： 25 26, 右： 24 25
Stmt (48)
    左： 27 28 29 30 31 32 33 34 35 36 37, 右： 25 30 31 32
DefList (49)
    左： 38 39, 右： 11 24 38
Def (50)
    左： 40, 右： 38
DecList (51)
    左： 41 42, 右： 40 42
Dec (52)
    左： 43 44, 右： 41 42
Exp (53)
    左： 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
    64 65, 右： 27 29 30 31 32 33 44 45 46 47 48 49 50 51 52 53 54
    55 58 59 63 64 66 67 68
Args (54)
    左： 66 67 68, 右： 56 66


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          转到状态 3
    ExtDefList       转到状态 4
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 1

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 2

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  转到状态 9
    Tag     转到状态 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 12
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  转到状态 15
    VarDec      转到状态 16
    FunDec      转到状态 17


State 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 8

   13 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  接受


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   16 VarDec: ID .
   18 FunDec: ID . LP VarList RP
   19       | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 16 (VarDec)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 7 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 23

    CompSt  转到状态 24


State 18

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        转到状态 25
    StructSpecifier  转到状态 7
    DefList          转到状态 26
    Def              转到状态 27


State 19

   18 FunDec: ID LP . VarList RP
   19       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 28
    STRUCT  shift, and go to state 2

    Specifier        转到状态 29
    StructSpecifier  转到状态 7
    VarList          转到状态 30
    ParamDec         转到状态 31


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 32

    ExtDecList  转到状态 33
    VarDec      转到状态 16


State 22

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 34


State 23

   24 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        转到状态 25
    StructSpecifier  转到状态 7
    DefList          转到状态 35
    Def              转到状态 27


State 24

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 25

   40 Def: Specifier . DecList SEMI

    ID  shift, and go to state 32

    VarDec   转到状态 36
    DecList  转到状态 37
    Dec      转到状态 38


State 26

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 39


State 27

   38 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        转到状态 25
    StructSpecifier  转到状态 7
    DefList          转到状态 40
    Def              转到状态 27


State 28

   19 FunDec: ID LP RP .

    $default  reduce using rule 19 (FunDec)


State 29

   23 ParamDec: Specifier . VarDec

    ID  shift, and go to state 32

    VarDec  转到状态 41


State 30

   18 FunDec: ID LP VarList . RP

    RP  shift, and go to state 42


State 31

   20 VarList: ParamDec . COMMA VarList
   21        | ParamDec .
   22        | ParamDec . error

    error  shift, and go to state 43
    COMMA  shift, and go to state 44

    RP  reduce using rule 21 (VarList)


State 32

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 33

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 34

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 45


State 35

   24 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    ID      shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    LP      shift, and go to state 52
    LC      shift, and go to state 23
    RETURN  shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55

    RC  reduce using rule 26 (StmtList)

    CompSt    转到状态 56
    StmtList  转到状态 57
    Stmt      转到状态 58
    Exp       转到状态 59


State 36

   17 VarDec: VarDec . LB INT RB
   43 Dec: VarDec .
   44    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 60
    LB        shift, and go to state 22

    $default  reduce using rule 43 (Dec)


State 37

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 61


State 38

   41 DecList: Dec .
   42        | Dec . COMMA DecList

    COMMA  shift, and go to state 62

    $default  reduce using rule 41 (DecList)


State 39

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 40

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 41

   17 VarDec: VarDec . LB INT RB
   23 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 23 (ParamDec)


State 42

   18 FunDec: ID LP VarList RP .

    $default  reduce using rule 18 (FunDec)


State 43

   22 VarList: ParamDec error .

    $default  reduce using rule 22 (VarList)


State 44

   20 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        转到状态 29
    StructSpecifier  转到状态 7
    VarList          转到状态 63
    ParamDec         转到状态 31


State 45

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 46

   65 Exp: error .

    $default  reduce using rule 65 (Exp)


State 47

   61 Exp: INT .

    $default  reduce using rule 61 (Exp)


State 48

   62 Exp: FLOAT .

    $default  reduce using rule 62 (Exp)


State 49

   56 Exp: ID . LP Args RP
   57    | ID . LP RP
   60    | ID .

    LP  shift, and go to state 64

    LP        [reduce using rule 60 (Exp)]
    $default  reduce using rule 60 (Exp)


State 50

   54 Exp: MINUS . Exp

    error  shift, and go to state 46
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  转到状态 65


State 51

   55 Exp: NOT . Exp

    error  shift, and go to state 46
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  转到状态 66


State 52

   53 Exp: LP . Exp RP

    error  shift, and go to state 46
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  转到状态 67


State 53

   29 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 46
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  转到状态 68


State 54

   30 Stmt: IF . LP Exp RP Stmt
   31     | IF . LP Exp RP Stmt ELSE Stmt
   34     | IF . error
   35     | IF . LP error

    error  shift, and go to state 69
    LP     shift, and go to state 70


State 55

   32 Stmt: WHILE . LP Exp RP Stmt
   36     | WHILE . error
   37     | WHILE . LP error

    error  shift, and go to state 71
    LP     shift, and go to state 72


State 56

   28 Stmt: CompSt .

    $default  reduce using rule 28 (Stmt)


State 57

   24 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 73


State 58

   25 StmtList: Stmt . StmtList

    error   shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    ID      shift, and go to state 49
    MINUS   shift, and go to state 50
    NOT     shift, and go to state 51
    LP      shift, and go to state 52
    LC      shift, and go to state 23
    RETURN  shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55

    RC  reduce using rule 26 (StmtList)

    CompSt    转到状态 56
    StmtList  转到状态 74
    Stmt      转到状态 58
    Exp       转到状态 59


State 59

   27 Stmt: Exp . SEMI
   33     | Exp . error
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error
   64    | Exp . LP error

    error     shift, and go to state 75
    SEMI      shift, and go to state 76
    ASSIGNOP  shift, and go to state 77
    RELOP     shift, and go to state 78
    PLUS      shift, and go to state 79
    MINUS     shift, and go to state 80
    STAR      shift, and go to state 81
    DIV       shift, and go to state 82
    AND       shift, and go to state 83
    OR        shift, and go to state 84
    DOT       shift, and go to state 85
    LP        shift, and go to state 86
    LB        shift, and go to state 87


State 60

   44 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 46
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  转到状态 88


State 61

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 62

   42 DecList: Dec COMMA . DecList

    ID  shift, and go to state 32

    VarDec   转到状态 36
    DecList  转到状态 89
    Dec      转到状态 38


State 63

   20 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 20 (VarList)


State 64

   56 Exp: ID LP . Args RP
   57    | ID LP . RP

    error  shift, and go to state 46
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52
    RP     shift, and go to state 90

    Exp   转到状态 91
    Args  转到状态 92


State 65

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   54    | MINUS Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error
   64    | Exp . LP error

    DOT  shift, and go to state 85
    LP   shift, and go to state 86
    LB   shift, and go to state 87

    $default  reduce using rule 54 (Exp)


State 66

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   55    | NOT Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error
   64    | Exp . LP error

    ASSIGNOP  shift, and go to state 77
    RELOP     shift, and go to state 78
    PLUS      shift, and go to state 79
    MINUS     shift, and go to state 80
    STAR      shift, and go to state 81
    DIV       shift, and go to state 82
    AND       shift, and go to state 83
    OR        shift, and go to state 84
    DOT       shift, and go to state 85
    LP        shift, and go to state 86
    LB        shift, and go to state 87

    ASSIGNOP  [reduce using rule 55 (Exp)]
    RELOP     [reduce using rule 55 (Exp)]
    PLUS      [reduce using rule 55 (Exp)]
    MINUS     [reduce using rule 55 (Exp)]
    STAR      [reduce using rule 55 (Exp)]
    DIV       [reduce using rule 55 (Exp)]
    AND       [reduce using rule 55 (Exp)]
    OR        [reduce using rule 55 (Exp)]
    DOT       [reduce using rule 55 (Exp)]
    LP        [reduce using rule 55 (Exp)]
    LB        [reduce using rule 55 (Exp)]
    $default  reduce using rule 55 (Exp)


State 67

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   53    | LP Exp . RP
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error
   64    | Exp . LP error

    ASSIGNOP  shift, and go to state 77
    RELOP     shift, and go to state 78
    PLUS      shift, and go to state 79
    MINUS     shift, and go to state 80
    STAR      shift, and go to state 81
    DIV       shift, and go to state 82
    AND       shift, and go to state 83
    OR        shift, and go to state 84
    DOT       shift, and go to state 85
    LP        shift, and go to state 86
    RP        shift, and go to state 93
    LB        shift, and go to state 87


State 68

   29 Stmt: RETURN Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error
   64    | Exp . LP error

    SEMI      shift, and go to state 94
    ASSIGNOP  shift, and go to state 77
    RELOP     shift, and go to state 78
    PLUS      shift, and go to state 79
    MINUS     shift, and go to state 80
    STAR      shift, and go to state 81
    DIV       shift, and go to state 82
    AND       shift, and go to state 83
    OR        shift, and go to state 84
    DOT       shift, and go to state 85
    LP        shift, and go to state 86
    LB        shift, and go to state 87


State 69

   34 Stmt: IF error .

    $default  reduce using rule 34 (Stmt)


State 70

   30 Stmt: IF LP . Exp RP Stmt
   31     | IF LP . Exp RP Stmt ELSE Stmt
   35     | IF LP . error

    error  shift, and go to state 95
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  转到状态 96


State 71

   36 Stmt: WHILE error .

    $default  reduce using rule 36 (Stmt)


State 72

   32 Stmt: WHILE LP . Exp RP Stmt
   37     | WHILE LP . error

    error  shift, and go to state 97
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  转到状态 98


State 73

   24 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 24 (CompSt)


State 74

   25 StmtList: Stmt StmtList .

    $default  reduce using rule 25 (StmtList)


State 75

   33 Stmt: Exp error .

    $default  reduce using rule 33 (Stmt)


State 76

   27 Stmt: Exp SEMI .

    $default  reduce using rule 27 (Stmt)


State 77

   45 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 46
    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    MINUS  shift, and go to state 50
    NOT    shift, and go to state 51
    LP     shift, and go to state 52

    Exp  转到状态 99


State 78

   48 Exp: Exp RELOP . Exp
